<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dictionary_cards_rus_to_eng___layout___main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            tools:text="@string/value"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/word_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/word"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_text" />

        <TextView
            android:id="@+id/transcription_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcription"
            android:textSize="24sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/word_text" />


        <ImageButton
            android:id="@+id/show_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/shape_white_color_primary_20dp"
            android:src="@drawable/ic_visibility_dark_blue_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/do_not_remember_button"
            style="@style/MaterialButtonWithoutAllCaps"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/do_not_remember"
            android:textSize="12sp" />

        <Button
            android:id="@+id/remember_button"
            style="@style/MaterialButtonWithoutAllCaps"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/remember"
            android:textSize="12sp" />

    </RelativeLayout>


</RelativeLayout>
