<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dictionary_cards_eng_to_rus___layout___main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___text_view___word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/word" />

        <TextView
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___text_view___transcription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dictionary_cards_eng_to_rus___text_view___word"
            tools:text="@string/transcription" />

        <TextView
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___text_view___value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dictionary_cards_eng_to_rus___text_view___transcription"
            tools:text="@string/value" />

        <ImageButton
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___image_button___show"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/shape_white_color_primary_20dp"
            android:src="@drawable/ic_visibility_dark_blue_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp">

        <Button
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___button___do_not_remember"
            style="@style/MaterialButtonWithoutAllCaps"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:text="@string/do_not_remember"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/fragment_dictionary_cards_eng_to_rus___button___remember"
            style="@style/MaterialButtonWithoutAllCaps"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="@string/remember"
            android:textSize="12sp"/>

    </FrameLayout>


</RelativeLayout>